docs/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedant
  namespace: default
  annotations:
    kubernetes.io/description: "pedant"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedant
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pedant
    spec:
      containers:
        - name: pedant
          image: "registry.cn-hangzhou.aliyuncs.com/startops/pedant:main_e687020"
          command:
            - /app/pedant-linux
            - -configPath=/app/configs/config.yaml
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 20000
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 20000
            timeoutSeconds: 10

          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 500m

          securityContext: {}

          volumeMounts:
            - mountPath: /app/configs
              name: pedant-config

      imagePullSecrets:
        - name: startops

      restartPolicy: Always
      securityContext: {}
      volumes:
        - configMap:
            name: pedant-config
          name: pedant-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pedant
  name: pedant
  namespace: default
spec:
  ports:
    - name: tcp20000
      port: 20000
      protocol: TCP
      targetPort: 20000
  selector:
    app: pedant
  type: NodePort
  sessionAffinity: None
