docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/describe: "pedant ingress"
  name: "pedant"
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: pedant.startops.com.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pedant
                port:
                  number: 20000
